# uber-price-prediction

./: .gitignore  LICENSE  ML model.ipynb  README.md  app.py  model.pkl  pyproject.toml  requirements.txt  test.py
jason.vscode/: jason.vsode
