[project]
name = "ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Ridhanya R", email = "ridhanya@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
ipykernel = "^6.30"
numpy = "^1.26"
pandas = "^2.1"
flask = "^2.3"
scikit-learn = "^1.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = []
