[project]
name = "Uber-rides-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "Ridhanya R", email = "ridhanya@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"

[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
python = "3.11"
ipykernel = "^6.30"
numpy = "1.25.2"
pandas = "^2.1"
flask = "^2.3"
scikit-learn = "1.5.3"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
